Rename 'View on explorer' button, fix tables align

--- a/src/styles/Utility/Table/index.scss
+++ b/src/styles/Utility/Table/index.scss
@@ -6,6 +6,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        width: 90px;
 
         &__icon {
             height: 32px;
